--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npm install express
+          npm install
           npm install --save-dev cypress
 
       - name: Build
